--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -5,7 +5,7 @@
 }
 
 body{
-	background-color : 2E2E2E;
+	background-color : #2E2E2E;
 	background-repeat : repeat;
 	background-attachment : scroll;       
 }
