--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -7,7 +7,9 @@
 body{
 	background-color: #2E2E2E;
 	background-repeat: repeat;
-	background-attachment: scroll;       
+	background-attachment: scroll;   
+	margin: 0;
+	padding: 0;
 }
 
 h1{
@@ -22,7 +24,6 @@ nav{
 	display: block;
 	float: right;
 	margin: 8px 22px 8px 22px;
-	width: 80%;
 }
 
 nav ul{
@@ -37,14 +38,12 @@ nav li{
 }
 
 a{
-	border: 4px solid #ffffff;
-	border-radius: 4px;
-	border-color: #fffff;
+	border: 2px solid #ffffff;
 	color: #FFDA88;
 	display: block;
 	text-align: center;
 	text-decoration: none;
-	padding: 8px;
+	padding: 12px;
 }
 
 a:hover{
