--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -9,7 +9,7 @@ body{
 	background-repeat: repeat;
 	background-attachment: scroll;   
 	margin: 0;
-	padding: 20;
+	padding: 25px;
 }
 
 h1{
@@ -25,7 +25,6 @@ nav{
 }
 
 nav ul{
-	float: right;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -34,6 +33,7 @@ nav ul{
 
 nav li{
 	display: inline;
+	float: right;
 }
 
 a{
