--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -9,7 +9,7 @@ body{
 	background-repeat: repeat;
 	background-attachment: scroll;   
 	margin: 0;
-	padding: 50px;
+	padding: 25px;
 }
 
 h1{
@@ -21,19 +21,19 @@ h1{
 }
 
 nav{
-	margin: 8px 22px 8px 22px;
+	margin: auto;
 }
 
 nav ul{
-	float: right;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	position: fixed;
 }
 
-nav ul li{
+nav li{
 	display: inline;
+	float: right;
 }
 
 a{
