--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -13,7 +13,7 @@ body{
 
 header{
 	background-image: url(https://tommyboys0107.github.io/image/Header.jpg);
-	background-size: contain;
+	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center center;
 }
