--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -1,9 +1,3 @@
-.fixedbackground{
-	background: url(https://tommyboys0107.github.io/image/CGD.png);
-	background-repeat: repeat;
-	background-attachment: fixed;                
-}
-
 body{
 	background-color: #2E2E2E;
 	background-repeat: repeat;
@@ -71,6 +65,11 @@ span.important{
 img{
 	display: block;
 	margin: auto;
+}
+
+.responsiveFull{
+	width: 100%;
+	height: auto;
 }
 
 .center{
