--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -14,11 +14,11 @@ header{
 
 h1{
 	font-family: "Iceland";
-	font-size: 100px;
+	font-size: 80px;
 	font-style: normal;
 	float: left;
 	color: #97E5FF;
-	display: inline;
+	display: inline-block;
 	text-shadow: 4px 4px 8px #97E5FF;
 }
 
