--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -1,16 +1,16 @@
-html.home{
-	background-image: url(https://tommyboys0107.github.io/image/HomeIntro.jpg);
-	background-color: #2E2E2E;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
 body{
 	background-color: #2E2E2E;
 	background-repeat: repeat;
 	background-attachment: scroll;
+	margin: auto;
+}
+
+body.home{
+	background-image: url(https://tommyboys0107.github.io/image/HomeIntro.jpg);
+	background-color: #2E2E2E;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
 	margin: auto;
 }
 
