--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -1,9 +1,15 @@
+html{
+	background-image: url(/image/HomeIntro.jpg);
+	background-color: #232323;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: contain;
+	background-position: top;
+}
+
 body{
-	font-family: "Courier New", Courier, monospace;
+	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1em; /* 1em = 16px*/
-	background-color: #2E2E2E;
-	background-repeat: repeat;
-	background-attachment: scroll;
 	margin: auto;
 }
 
@@ -14,7 +20,7 @@ header{
 }
 
 h1{
-	font-family: "Iceland";
+	font-family: Helvetica, Arial, sans-serif;
 	font-size: 5em; /* 1em = 16px*/
 	font-style: normal;
 	color: #97E5FF;
@@ -41,36 +47,44 @@ nav li{
 
 a{
 	font-size: 1.25em; /* 1em = 16px*/
-	font-weight: bold;
+	font-weight: normal;
 	border: 2px groove #ffffff;
-	border-radius: 3px;
-	box-shadow: 0px 10px 10px #000000;
+	border-radius: 4px;
+	box-shadow: 0px 0px 7px grey;
+	background: rgba(51,51,51, 0.5);
 	color: #FFDA88;
 	display: inline-block;
 	text-align: center;
 	text-decoration: none;
+	transition-property: background;
+	transition-duration: 300ms;
+	transition-timing-function: ease-out;
 	padding: 16px;
 	width: 125px;
 }
 
 a:hover{
-	background-color: #333333;
+	background: #333333;
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(255,218,139, 0.2));
 }
 
 a.currentPage{
-	background-color: #4E4E4E;
+	background: #4E4E4E;
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(151,229,255, 0.2));
 }
 
 a:active{
-	background-color: #4E4E4E;
+	background: #4E4E4E;
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(151,229,255, 0.4));
 }
 
 p{
 	text-align: justify;
 	text-indent: 20px;
 	line-height: 1.2;
-	font-family: "Iceland";
+	font-family: Helvetica, Arial, sans-serif;
 	word-wrap: break-word;
+	word-break: keep-all;
 	color: #FFDA8B;
 	overflow: auto;
 }
