--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -18,12 +18,16 @@ html{
 }
 
 body{
+	display: flex;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1em; /* 1em = 16px*/
 	margin: auto;
 }
 
 header{
+	display: inline-flex;
+	justify-content: space-between;
+	align-items: center;
 	position: fixed;
 	top: 20px;
 	width: 100%;
@@ -34,29 +38,35 @@ h1{
 	font-size: 5em; /* 1em = 16px*/
 	font-style: normal;
 	color: #97E5FF;
-	display: inline;
 	text-shadow: 4px 4px 8px #97E5FF;
-	margin: 20px 0px 0px 40px;
+	margin: 20px 0px 0px 60px;
 }
 
 nav{
+	display: inline-flex;
 	animation-fill-mode: forwards;
 	animation-name: navigationBar;
 	animation-duration: 1.5s;
 	position: relative;
-	margin: 20px 40px 0px 0px;
+	margin: 20px 60px 0px 0px;
+	width: 40%;
 	float: right;
 }
 
 nav ul{
+	display: inline-flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	align-items: flex-start;
+	align-content: flex-start;
 	list-style-type: none;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
 
 nav li{
-	padding-left: 10px;
-	display: inline-block;
+	display: inline-flex;
 }
 
 a{
@@ -67,13 +77,13 @@ a{
 	box-shadow: 0px 0px 7px grey;
 	background: rgba(51,51,51, 0.5);
 	color: #FFDA88;
-	display: inline-block;
 	text-align: center;
 	text-decoration: none;
 	transition-property: background;
 	transition-duration: 300ms;
 	transition-timing-function: ease-out;
 	padding: 16px;
+	margin: 8px;
 	width: 125px;
 }
 
@@ -105,11 +115,6 @@ p{
 
 span.important{
 	color: #FF8A8A;
-}
-
-img{
-	display: block;
-	margin: auto;
 }
 
 .responsiveFull{
