--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -25,11 +25,15 @@
 	--linkHover: hsla(2, 100%, 63%, 0.3);
 	--linkActive: hsla(233, 56%, 64%, 0.3);
 
-	--normalFontSize: 1em;  /* 1em = 16px*/
+	--headerFontSize: 4rem;
+	--navigationFontSize: 1.5rem;
+	--normalFontSize: 1rem;
 	--fontFamily: 'Noto Sans TC', Helvetica, sans-serif;
 }
 
 html{
+	font-size: 20px;
+	font-family: var(--fontFamily);
 	background-image: url(../image/HomeIntro.jpg);
 	background-color: var(--themeGray);
 	background-repeat: no-repeat;
@@ -40,7 +44,6 @@ html{
 
 body{
 	display: flex;
-	font-family: var(--fontFamily);
 	font-size: var(--normalFontSize);
 	margin: auto;
 }
@@ -50,17 +53,17 @@ header{
 	justify-content: space-between;
 	align-items: center;
 	position: fixed;
-	top: 20px;
+	top: 40px;
 	width: 100%;
 }
 
 h1{
-	font-family: var(--fontFamily);
-	font-size: calc(5 * var(--normalFontSize));
+	font-size: var(--headerFontSize);
 	font-style: normal;
 	color: var(--themeWhite);
-	text-shadow: 0px 0px 8px var(--themeWhite);
-	margin: 20px 0px 0px 60px;
+	text-shadow: 0px 0px 0.5rem var(--themeWhite);
+	text-align: center;
+	margin: 0px 0px 0px 0px;
 }
 
 nav{
@@ -69,7 +72,6 @@ nav{
 	animation-name: navigationBar;
 	animation-duration: 1.5s;
 	position: relative;
-	margin: 20px 60px 0px 0px;
 	width: 40%;
 	float: right;
 }
@@ -88,20 +90,19 @@ nav ul{
 
 nav li{
 	display: inline-flex;
-	box-shadow: 0px 0px 8px var(--themeWhite);
+	box-shadow: 0px 0px 0.5rem var(--themeWhite);
 	margin: 1px;
 }
 
 nav a{
 	color: var(--themeWhite);
-	padding: 16px;
-	width: 150px;
-	text-shadow: 0px 0px 6px var(--themeWhite);
+	padding: 1rem;
+	width: 9rem;
+	text-shadow: 0px 0px 0.4rem var(--themeWhite);
 }
 
 a{
-	font-family: var(--fontFamily);
-	font-size: calc(1.50 * var(--normalFontSize));
+	font-size: var(--navigationFontSize);
 	font-weight: normal;
 	background: var(--linkBackground);
 	color: var(--themeBlue);
@@ -129,9 +130,8 @@ a:active{
 
 p{
 	text-align: justify;
-	text-indent: 20px;
+	text-indent: 1rem;
 	line-height: 1.2;
-	font-family: var(--fontFamily);
 	word-wrap: break-word;
 	word-break: keep-all;
 	color: var(--themeWhite);
