[Feature] Make navigation bar responsive to it's font size.
Add lorem paragraph in home page.

--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -18,15 +18,15 @@
 	--themeGreen: hsla(127, 67%, 64%, 1.0);
 	--themeBlue: hsla(233, 56%, 64%, 1.0);
 	--themeWhite: hsla(0, 0%, 96%, 1.0);
-	--themeClear: hsla(0, 0%, 0%, 0.0);
+	--themeClear: hsla(0, 0%, 0%, 0.9);
 
-	--linkBackground: hsla(180, 8%, 15%, 0.8);
-	--linkCurrentPage: hsla(233, 56%, 64%, 0.3);
-	--linkHover: hsla(2, 100%, 63%, 0.3);
-	--linkActive: hsla(233, 56%, 64%, 0.3);
+	--linkBackground: hsla(180, 8%, 15%, 0.9);
+	--linkCurrentPage: hsla(233, 56%, 64%, 0.9);
+	--linkHover: hsla(2, 100%, 63%, 0.9);
+	--linkActive: hsla(233, 56%, 64%, 0.9);
 
 	--headerFontSize: 4rem;
-	--navigationFontSize: 1.5rem;
+	--navigationFontSizeScalar: 1.2;
 	--normalFontSize: 1rem;
 	--fontFamily: 'Noto Sans TC', Helvetica, sans-serif;
 }
@@ -43,7 +43,7 @@ html{
 }
 
 body{
-	margin: 0;
+	margin-top: 4rem;
 }
 
 header{
@@ -66,9 +66,10 @@ nav{
 	animation-fill-mode: forwards;
 	animation-name: navigationBar;
 	animation-duration: 1.5s;
-	position: relative;
+	position: fixed;
 	width: 100%;
 	margin: 0;
+	z-index: 50;
 }
 
 nav ul{
@@ -91,31 +92,29 @@ nav ul li.floatRight{
 nav a{
 	display: block;
 	color: var(--themeWhite);
-	padding: 1rem;
+	padding: calc(var(--navigationFontSizeScalar) * 0.5rem);
 	width: auto;
-	height: auto;
-	margin-left: 0.05rem;
-	margin-right: 0.05rem;
+	height: calc(var(--navigationFontSizeScalar) * 2.5rem);
 	margin-bottom: 0.5rem;
 	text-shadow: 0px 0px 0.4rem var(--themeWhite);
 	box-shadow: 0px 0px 0.5rem var(--themeWhite);
 }
 
 nav a.logo{
-	padding: 0.36rem;
-	width: auto;
-	height: auto;
+	padding: calc(var(--navigationFontSizeScalar) * 0.1rem);
+	width: calc(var(--navigationFontSizeScalar) * 2.6rem);
+	height: calc(var(--navigationFontSizeScalar) * 2.5rem);
 }
 
 a{
-	font-size: var(--navigationFontSize);
+	font-size: calc(var(--navigationFontSizeScalar) * var(--normalFontSize));
 	font-weight: normal;
 	background: var(--linkBackground);
 	color: var(--themeBlue);
 	text-align: center;
 	text-decoration: none;
 	transition-property: background;
-	transition-duration: 300ms;
+	transition-duration: 2000ms;
 	transition-timing-function: ease-out;
 }
 
@@ -145,14 +144,14 @@ img.logo{
 	display: block;
 	clear: both;
 	width: auto;
-	height: 3.5rem;
+	height: calc(var(--navigationFontSizeScalar) * 2.25rem);
 	margin: auto;
 }
 
 p{
 	text-align: justify;
 	text-indent: 1rem;
-	line-height: 1.2;
+	line-height: 1.5;
 	word-wrap: break-word;
 	word-break: keep-all;
 	color: var(--themeWhite);
