[Update] Add a full screen figure in html and css.

--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -128,15 +128,14 @@ a:active{
 	transition-duration: 0ms;
 }
 
-img{
+figure.fullScreen{
 	display: block;
 	max-width: 100%;
 	height: auto;
 	margin: auto;
 }
 
-
-img.fullScreen{
+img{
 	display: block;
 	max-width: 100%;
 	height: auto;
