--- a/css/CliffLee.css
+++ b/css/CliffLee.css
@@ -6,6 +6,7 @@
 
 	/* Variables */
 	--themeBlack: hsla(180, 8%, 8%, 1.0);
+	--themeBlackTransparent: hsla(180, 8%, 8%, 0.6);
 	--themeGray: hsla(180, 8%, 15%, 1.0);
 	--themeRed: hsla(2, 100%, 63%, 1.0);
 	--themeGreen: hsla(127, 67%, 64%, 1.0);
@@ -44,10 +45,9 @@ section{
 footer{
 	margin: 0;
 	padding-top: 2%;
-	padding-bottom: 2%;
-}
-
-footer p{
+	padding-bottom: 3%;
+	padding-left: 5%;
+	padding-right: 5%;
 	color: var(--themeDarkerWhite);
 }
 
@@ -152,10 +152,15 @@ a:active{
 }
 
 figure.fullScreen{
+	position: relative;
 	display: block;
 	max-width: 100%;
 	height: auto;
 	margin: auto;
+}
+
+figure:hover .overlay{
+	opacity: 1;
 }
 
 img{
@@ -200,6 +205,19 @@ p{
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+.overlay{
+	position: absolute;
+	bottom: 0;
+    left: 0;
+    right: 0;
+	margin: auto;
+	background: var(--themeBlack);
+	background: var(--themeBlackTransparent);
+	width: 100%;
+	transition: .4s ease;
+	opacity: 0.0;
 }
 
 .important{
